force-app/main/default/objects/Profession__c/Profession__c.object-meta.xml
<CustomObject>
    <label>Profession</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>