force-app/main/default/objects/Profession__c/fields/Board_ID__c.field-meta.xml
<CustomField>
    <fullName>Board_ID__c</fullName>
    <label>Board ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>