force-app/main/default/objects/Profession__c/fields/Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Board_Name__c</fullName>
    <label>Board Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>