force-app/main/default/objects/Profession__c/fields/BoardName__c.field-meta.xml
<CustomField>
    <fullName>BoardName__c</fullName>
    <label>Board Name</label>
    <type>TextArea</type>
</CustomField>