force-app/main/default/objects/Profession__c/fields/Interrupted__c.field-meta.xml
<CustomField>
    <fullName>Interrupted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interrupted</label>
    <type>Checkbox</type>
</CustomField>