force-app/main/default/objects/Profession__c/fields/MV_Guide__c.field-meta.xml
<CustomField>
    <fullName>MV_Guide__c</fullName>
    <label>MV Guide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>