force-app/main/default/objects/Profession__c/fields/Profession_Code__c.field-meta.xml
<CustomField>
    <fullName>Profession_Code__c</fullName>
    <label>Profession Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>