force-app/main/default/objects/Profession__c/fields/Profession_ID__c.field-meta.xml
<CustomField>
    <fullName>Profession_ID__c</fullName>
    <label>Profession ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>