force-app/main/default/objects/Profession__c/fields/ProfessionCode__c.field-meta.xml
<CustomField>
    <fullName>ProfessionCode__c</fullName>
    <label>Profession Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>