force-app/main/default/objects/Profession__c/fields/ProfessionName__c.field-meta.xml
<CustomField>
    <fullName>ProfessionName__c</fullName>
    <label>Profession Name</label>
    <type>TextArea</type>
</CustomField>