force-app/main/default/objects/Profession__c/fields/ProfessionStatus__c.field-meta.xml
<CustomField>
    <fullName>ProfessionStatus__c</fullName>
    <label>Profession Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTOMATED</fullName>
                <default>true</default>
                <label>AUTOMATED</label>
            </value>
            <value>
                <fullName>INTERRUPTED</fullName>
            </value>
            <value>
                <fullName>MANUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>