force-app/main/default/objects/Profession__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <formula>CASE(
    State_Code__c,
    &quot;AL&quot;, &quot;Alabama&quot;,
    &quot;AK&quot;, &quot;Alaska&quot;,
    &quot;AZ&quot;, &quot;Arizona&quot;,
    &quot;AR&quot;, &quot;Arkansas&quot;,
    &quot;CA&quot;, &quot;California&quot;,
    &quot;CO&quot;, &quot;Colorado&quot;,
    &quot;CT&quot;, &quot;Connecticut&quot;,
    &quot;DE&quot;, &quot;Delaware&quot;,
    &quot;FL&quot;, &quot;Florida&quot;,
    &quot;GA&quot;, &quot;Georgia&quot;,
    &quot;HI&quot;, &quot;Hawaii&quot;,
    &quot;ID&quot;, &quot;Idaho&quot;,
    &quot;IL&quot;, &quot;Illinois&quot;,
    &quot;IN&quot;, &quot;Indiana&quot;,
    &quot;IA&quot;, &quot;Iowa&quot;,
    &quot;KS&quot;, &quot;Kansas&quot;,
    &quot;KY&quot;, &quot;Kentucky&quot;,
    &quot;LA&quot;, &quot;Louisiana&quot;,
    &quot;ME&quot;, &quot;Maine&quot;,
    &quot;MD&quot;, &quot;Maryland&quot;,
    &quot;MA&quot;, &quot;Massachusetts&quot;,
    &quot;MI&quot;, &quot;Michigan&quot;,
    &quot;MN&quot;, &quot;Minnesota&quot;,
    &quot;MS&quot;, &quot;Mississippi&quot;,
    &quot;MO&quot;, &quot;Missouri&quot;,
    &quot;MT&quot;, &quot;Montana&quot;,
    &quot;NE&quot;, &quot;Nebraska&quot;,
    &quot;NV&quot;, &quot;Nevada&quot;,
    &quot;NH&quot;, &quot;New Hampshire&quot;,
    &quot;NJ&quot;, &quot;New Jersey&quot;,
    &quot;NM&quot;, &quot;New Mexico&quot;,
    &quot;NY&quot;, &quot;New York&quot;,
    &quot;NC&quot;, &quot;North Carolina&quot;,
    &quot;ND&quot;, &quot;North Dakota&quot;,
    &quot;OH&quot;, &quot;Ohio&quot;,
    &quot;OK&quot;, &quot;Oklahoma&quot;,
    &quot;OR&quot;, &quot;Oregon&quot;,
    &quot;PA&quot;, &quot;Pennsylvania&quot;,
    &quot;RI&quot;, &quot;Rhode Island&quot;,
    &quot;SC&quot;, &quot;South Carolina&quot;,
    &quot;SD&quot;, &quot;South Dakota&quot;,
    &quot;TN&quot;, &quot;Tennessee&quot;,
    &quot;TX&quot;, &quot;Texas&quot;,
    &quot;UT&quot;, &quot;Utah&quot;,
    &quot;VT&quot;, &quot;Vermont&quot;,
    &quot;VA&quot;, &quot;Virginia&quot;,
    &quot;WA&quot;, &quot;Washington&quot;,
    &quot;WV&quot;, &quot;West Virginia&quot;,
    &quot;WI&quot;, &quot;Wisconsin&quot;,
    &quot;WY&quot;, &quot;Wyoming&quot;,
    &quot;PR&quot;, &quot;Puerto Rico&quot;,
    &quot;VI&quot;, &quot;Virgin Islands&quot;,
    &quot;GU&quot;, &quot;Guam&quot;,
    &quot;MP&quot;, &quot;Mariana Islands&quot;,
    &quot;CERT&quot;, &quot;Certifications&quot;,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Name</label>
    <type>Text</type>
</CustomField>