force-app/main/default/objects/Profession__c/fields/StateName__c.field-meta.xml
<CustomField>
    <fullName>StateName__c</fullName>
    <label>State Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>