force-app/main/default/objects/Profession__c/fields/Use_Custom_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Statuses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Custom Statuses</label>
    <type>Checkbox</type>
</CustomField>