force-app/main/default/objects/Profession__c/fields/Verification_Fee__c.field-meta.xml
<CustomField>
    <fullName>Verification_Fee__c</fullName>
    <label>Verification Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>