force-app/main/default/objects/Profession__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>MV Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>