force-app/main/default/objects/Profession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Profession_Code__c</columns>
    <columns>Profession_ID__c</columns>
    <columns>PKID__c</columns>
    <columns>Board_ID__c</columns>
    <columns>Board_Name__c</columns>
    <columns>Complexity__c</columns>
    <columns>Website__c</columns>
    <columns>MV_Guide__c</columns>
    <columns>Interrupted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>